--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -44,7 +44,7 @@ http {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
-			proxy_set_header X-Method-Allowed "POST, GET, OPTIONS";
+			proxy_set_header X-Method-Allowed "POST, GET, OPTIONS, PUT";
 		}
 
 		# proxy request for register API
@@ -87,7 +87,7 @@ http {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			
+
 		}
 
 		location /ws/tournament {
